--- a/release-notes.html
+++ b/release-notes.html
@@ -528,6 +528,12 @@ See <a href="manual/pattern-layout.html#jansi" class="xref page">ANSI styling on
 <p>Fix <code>ArrayIndexOutOfBoundsException</code> in JSON Template Layout truncated exception resolver (<a href="https://github.com/apache/logging-log4j2/pull/3212">3212</a>)</p>
 </li>
 <li>
+<p>Fix detection of location requirements in <code>AsyncAppender</code>. (<a href="https://github.com/apache/logging-log4j2/issues/3257">3257</a>)</p>
+</li>
+<li>
+<p>Fix detection of location requirements in <code>FailoverAppender</code>. (<a href="https://github.com/apache/logging-log4j2/issues/3257">3257</a>)</p>
+</li>
+<li>
 <p>Avoid surrogate character handling in <code>JsonWriter</code></p>
 </li>
 </ul>
@@ -548,7 +554,7 @@ See <a href="manual/pattern-layout.html#jansi" class="xref page">ANSI styling on
 <div class="ulist">
 <ul>
 <li>
-<p>Update <code>ch.qos.logback:logback-core</code> to version <code>1.4.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/2975">2975</a>)</p>
+<p>Update <code>ch.qos.logback:logback-core</code> to version <code>1.3.15</code> (<a href="https://github.com/apache/logging-log4j2/pull/3354">3354</a>)</p>
 </li>
 <li>
 <p>Update <code>co.elastic.clients:elasticsearch-java</code> to version <code>8.17.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/3287">3287</a>)</p>
@@ -560,7 +566,7 @@ See <a href="manual/pattern-layout.html#jansi" class="xref page">ANSI styling on
 <p>Update <code>com.github.jnr:jnr-ffi</code> to version <code>2.2.17</code> (<a href="https://github.com/apache/logging-log4j2/pull/3082">3082</a>)</p>
 </li>
 <li>
-<p>Update <code>com.github.luben:zstd-jni</code> to version <code>1.5.6-8</code> (<a href="https://github.com/apache/logging-log4j2/pull/3236">3236</a>)</p>
+<p>Update <code>com.github.luben:zstd-jni</code> to version <code>1.5.6-9</code> (<a href="https://github.com/apache/logging-log4j2/pull/3345">3345</a>)</p>
 </li>
 <li>
 <p>Update <code>com.google.guava:guava</code> to version <code>33.4.0-jre</code> (<a href="https://github.com/apache/logging-log4j2/pull/3302">3302</a>)</p>
@@ -615,6 +621,9 @@ See <a href="manual/pattern-layout.html#jansi" class="xref page">ANSI styling on
 </li>
 <li>
 <p>Update <code>org.jmdns:jmdns</code> to version <code>3.6.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/3189">3189</a>)</p>
+</li>
+<li>
+<p>Update <code>org.json:json</code> to version <code>20241224</code> (<a href="https://github.com/apache/logging-log4j2/pull/3347">3347</a>)</p>
 </li>
 <li>
 <p>Update <code>org.junit:junit-bom</code> to version <code>5.11.4</code> (<a href="https://github.com/apache/logging-log4j2/pull/3301">3301</a>)</p>
@@ -10638,7 +10647,7 @@ patches, or suggestions for improvement, see
 </div>
 <footer class="footer">
   <p>
-    Copyright © 1999-2024 <a href="https://www.apache.org/">The Apache Software Foundation</a>.
+    Copyright © 1999-2025 <a href="https://www.apache.org/">The Apache Software Foundation</a>.
     Licensed under the <a href="https://www.apache.org/licenses/LICENSE-2.0">Apache Software License, Version 2.0</a>.
     Please read our <a href="https://privacy.apache.org/policies/privacy-policy-public.html">privacy policy</a>.
   </p>
