--- a/release-notes.html
+++ b/release-notes.html
@@ -453,6 +453,9 @@ See <a href="manual/pattern-layout.html#jansi" class="xref page">ANSI styling on
 <li>
 <p>Add improved validation to StringMatchFilter for null/empty text. GitHub issue #3153. (<a href="https://github.com/apache/logging-log4j2/issues/3153">3153</a>)</p>
 </li>
+<li>
+<p>Currently Java 8 users do not have access to timestamps with sub-millisecond precision. This change moves the SystemClock implementation from log4j-core-java9 to log4j-core, overriding the current one, so that java 8 users can benefit from it. (<a href="https://github.com/apache/logging-log4j2/pull/3217">3217</a>)</p>
+</li>
 </ul>
 </div>
 </div>
@@ -584,10 +587,10 @@ See <a href="manual/pattern-layout.html#jansi" class="xref page">ANSI styling on
 <p>Update <code>net.java.dev.jna:jna</code> to version <code>5.16.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/3323">3323</a>)</p>
 </li>
 <li>
-<p>Update <code>org.apache.activemq:activemq-broker</code> to version <code>6.1.4</code> (<a href="https://github.com/apache/logging-log4j2/pull/3204">3204</a>)</p>
+<p>Update <code>org.apache.activemq:activemq-broker</code> to version <code>6.1.5</code> (<a href="https://github.com/apache/logging-log4j2/pull/3391">3391</a>)</p>
 </li>
 <li>
-<p>Update <code>org.apache.commons:commons-csv</code> to version <code>1.12.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/3014">3014</a>)</p>
+<p>Update <code>org.apache.commons:commons-csv</code> to version <code>1.13.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/3389">3389</a>)</p>
 </li>
 <li>
 <p>Update <code>org.apache.commons:commons-dbcp2</code> to version <code>2.13.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/3271">3271</a>)</p>
@@ -614,6 +617,9 @@ See <a href="manual/pattern-layout.html#jansi" class="xref page">ANSI styling on
 <p>Update <code>org.codehaus.plexus:plexus-utils</code> to version <code>3.6.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/3297">3297</a>)</p>
 </li>
 <li>
+<p>Update <code>org.eclipse.jetty:jetty-util</code> to version <code>9.4.57.v20241219</code> (<a href="https://github.com/apache/logging-log4j2/pull/3377">3377</a>)</p>
+</li>
+<li>
 <p>Update <code>org.eclipse.platform:org.eclipse.osgi</code> to version <code>3.22.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/3270">3270</a>)</p>
 </li>
 <li>
@@ -623,7 +629,7 @@ See <a href="manual/pattern-layout.html#jansi" class="xref page">ANSI styling on
 <p>Update <code>org.jmdns:jmdns</code> to version <code>3.6.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/3189">3189</a>)</p>
 </li>
 <li>
-<p>Update <code>org.json:json</code> to version <code>20241224</code> (<a href="https://github.com/apache/logging-log4j2/pull/3346">3346</a>)</p>
+<p>Update <code>org.json:json</code> to version <code>20250107</code> (<a href="https://github.com/apache/logging-log4j2/pull/3373">3373</a>)</p>
 </li>
 <li>
 <p>Update <code>org.junit:junit-bom</code> to version <code>5.11.4</code> (<a href="https://github.com/apache/logging-log4j2/pull/3301">3301</a>)</p>
@@ -641,7 +647,7 @@ See <a href="manual/pattern-layout.html#jansi" class="xref page">ANSI styling on
 <p>Update <code>org.openrewrite.recipe:rewrite-logging-frameworks</code> to version <code>2.3.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/2986">2986</a>)</p>
 </li>
 <li>
-<p>Update <code>org.openrewrite.recipe:rewrite-migrate-java</code> to version <code>2.4.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/2989">2989</a>)</p>
+<p>Update <code>org.openrewrite.recipe:rewrite-migrate-java</code> to version <code>3.0.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/3390">3390</a>)</p>
 </li>
 <li>
 <p>Update <code>org.ops4j.pax.exam:exam-maven-plugin</code> to version <code>4.14.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/3280">3280</a>)</p>
