Add website content generated from `4d0f818ea342a4262a5c930411bf48cd2ccb5b33`

--- a/release-notes.html
+++ b/release-notes.html
@@ -563,6 +563,9 @@ See <a href="manual/pattern-layout.html#jansi" class="xref page">ANSI styling on
 <p>Update <code>co.elastic.clients:elasticsearch-java</code> to version <code>8.17.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/3287">3287</a>)</p>
 </li>
 <li>
+<p>Update <code>com.code-intelligence:jazzer</code> to version <code>0.23.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/3326">3326</a>)</p>
+</li>
+<li>
 <p>Update <code>com.fasterxml.jackson:jackson-bom</code> to version <code>2.18.2</code> (<a href="https://github.com/apache/logging-log4j2/pull/3244">3244</a>)</p>
 </li>
 <li>
