Add website content generated from `dde26524a9e1c011cea9373f37ec50574e8b96c3`

--- a/release-notes.html
+++ b/release-notes.html
@@ -617,6 +617,9 @@ See <a href="manual/pattern-layout.html#jansi" class="xref page">ANSI styling on
 <p>Update <code>org.apache.tomcat:tomcat-juli</code> to version <code>10.1.30</code> (<a href="https://github.com/apache/logging-log4j2/pull/2999">2999</a>)</p>
 </li>
 <li>
+<p>Update <code>org.assertj:assertj-core</code> to version <code>3.27.3</code> (<a href="https://github.com/apache/logging-log4j2/pull/3404">3404</a>)</p>
+</li>
+<li>
 <p>Update <code>org.codehaus.plexus:plexus-utils</code> to version <code>3.6.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/3297">3297</a>)</p>
 </li>
 <li>
@@ -644,7 +647,7 @@ See <a href="manual/pattern-layout.html#jansi" class="xref page">ANSI styling on
 <p>Update <code>org.openjdk.nashorn:nashorn-core</code> to version <code>15.6</code> (<a href="https://github.com/apache/logging-log4j2/pull/3331">3331</a>)</p>
 </li>
 <li>
-<p>Update <code>org.openrewrite.maven:rewrite-maven-plugin</code> to version <code>5.15.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/2983">2983</a>)</p>
+<p>Update <code>org.openrewrite.maven:rewrite-maven-plugin</code> to version <code>6.0.1</code> (<a href="https://github.com/apache/logging-log4j2/pull/3397">3397</a>)</p>
 </li>
 <li>
 <p>Update <code>org.openrewrite.recipe:rewrite-logging-frameworks</code> to version <code>2.3.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/2986">2986</a>)</p>
