Add website content generated from `087d152e9dce261122f73ead8b1f118f28e7f352`

--- a/faq.html
+++ b/faq.html
@@ -802,7 +802,7 @@ You need to properly merge them by concatenating conflicting files.</p>
 <dt class="hdlist1"><a href="https://gradleup.com/shadow/">Gradle Shadow Plugin</a></dt>
 <dd>
 <p>You need to use the
-<a href="https://github.com/GradleUp/shadow/blob/main/src/main/groovy/com/github/jengelman/gradle/plugins/shadow/transformers/Log4j2PluginsCacheFileTransformer.groovy"><code>Log4j2PluginsCacheFileTransformer</code></a>.</p>
+<a href="https://gradleup.com/shadow/configuration/merging/#merging-log4j2-plugin-cache-files-log4j2plugins-dat"><code>Log4j2PluginsCacheFileTransformer</code></a>.</p>
 </dd>
 </dl>
 </div>
@@ -820,7 +820,7 @@ You need to properly merge them by concatenating conflicting files.</p>
 </div>
 <footer class="footer">
   <p>
-    Copyright © 1999-2024 <a href="https://www.apache.org/">The Apache Software Foundation</a>.
+    Copyright © 1999-2025 <a href="https://www.apache.org/">The Apache Software Foundation</a>.
     Licensed under the <a href="https://www.apache.org/licenses/LICENSE-2.0">Apache Software License, Version 2.0</a>.
     Please read our <a href="https://privacy.apache.org/policies/privacy-policy-public.html">privacy policy</a>.
   </p>
