Add website content generated from `f5c6d737723b7cd6e617565c69a245e4b206a01c`

--- a/release-notes.html
+++ b/release-notes.html
@@ -537,6 +537,9 @@ See <a href="manual/pattern-layout.html#jansi" class="xref page">ANSI styling on
 <p>Fix detection of location requirements in <code>FailoverAppender</code>. (<a href="https://github.com/apache/logging-log4j2/issues/3257">3257</a>)</p>
 </li>
 <li>
+<p>Fix loading of the effective <code>RecyclerFactoryConverter</code> in JSON Template Layout (<a href="https://github.com/apache/logging-log4j2/pull/3398">3398</a>)</p>
+</li>
+<li>
 <p>Avoid surrogate character handling in <code>JsonWriter</code></p>
 </li>
 </ul>
