Add website content generated from `fce6ce9bd4a8ecb7a70229e0d6182e296b9b86b7`

--- a/manual/installation.html
+++ b/manual/installation.html
@@ -652,6 +652,12 @@ You can import the BOM in your build tool of preference:</p>
 </div>
 <div class="dlist">
 <dl>
+<dt class="hdlist1"><a href="simple-logger.html" class="xref page">Simple Logger</a></dt>
+<dd>
+<p>This is a fallback implementation embedded into the Log4j API artifact.
+The usage of this implementation generates an error message unless you enable it explicitly.
+See <a href="#impl-simple">Installing Simple Logger</a> for more details.</p>
+</dd>
 <dt class="hdlist1"><code>log4j-core</code></dt>
 <dd>
 <p>The reference implementation.
