--- a/release-notes.html
+++ b/release-notes.html
@@ -540,6 +540,9 @@ See <a href="manual/pattern-layout.html#jansi" class="xref page">ANSI styling on
 <p>Fix loading of the effective <code>RecyclerFactoryConverter</code> in JSON Template Layout (<a href="https://github.com/apache/logging-log4j2/pull/3398">3398</a>)</p>
 </li>
 <li>
+<p>Minimize lock usage in <code>InternalLoggerRegistry</code>. (<a href="https://github.com/apache/logging-log4j2/issues/3399">3399</a>)</p>
+</li>
+<li>
 <p>Avoid surrogate character handling in <code>JsonWriter</code></p>
 </li>
 </ul>
@@ -566,7 +569,7 @@ See <a href="manual/pattern-layout.html#jansi" class="xref page">ANSI styling on
 <p>Update <code>co.elastic.clients:elasticsearch-java</code> to version <code>8.17.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/3287">3287</a>)</p>
 </li>
 <li>
-<p>Update <code>com.code-intelligence:jazzer</code> to version <code>0.23.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/3326">3326</a>)</p>
+<p>Update <code>com.code-intelligence:jazzer</code> to version <code>0.24.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/3424">3424</a>)</p>
 </li>
 <li>
 <p>Update <code>com.fasterxml.jackson:jackson-bom</code> to version <code>2.18.2</code> (<a href="https://github.com/apache/logging-log4j2/pull/3244">3244</a>)</p>
@@ -596,10 +599,16 @@ See <a href="manual/pattern-layout.html#jansi" class="xref page">ANSI styling on
 <p>Update <code>org.apache.activemq:activemq-broker</code> to version <code>6.1.5</code> (<a href="https://github.com/apache/logging-log4j2/pull/3391">3391</a>)</p>
 </li>
 <li>
+<p>Update <code>org.apache.cassandra:cassandra-all</code> to version <code>3.11.18</code> (<a href="https://github.com/apache/logging-log4j2/pull/3434">3434</a>)</p>
+</li>
+<li>
 <p>Update <code>org.apache.commons:commons-csv</code> to version <code>1.13.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/3389">3389</a>)</p>
 </li>
 <li>
 <p>Update <code>org.apache.commons:commons-dbcp2</code> to version <code>2.13.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/3271">3271</a>)</p>
+</li>
+<li>
+<p>Update <code>org.apache.commons:commons-pool2</code> to version <code>2.12.1</code> (<a href="https://github.com/apache/logging-log4j2/pull/3422">3422</a>)</p>
 </li>
 <li>
 <p>Update <code>org.apache.groovy:groovy-bom</code> to version <code>4.0.25</code> (<a href="https://github.com/apache/logging-log4j2/pull/3417">3417</a>)</p>
