--- a/manual/installation.html
+++ b/manual/installation.html
@@ -1296,7 +1296,7 @@ A basic configuration can be obtained by adding one of these files to your appli
 <div class="content">
 <pre class="highlightjs highlight"><code class="language-properties hljs" data-lang="properties">appender.0.type = Console
 appender.0.name = CONSOLE
-appender.0.layout = PatternLayout <i class="conum" data-value="1"></i><b>(1)</b>
+appender.0.layout.type = PatternLayout <i class="conum" data-value="1"></i><b>(1)</b>
 appender.0.layout.pattern = %d [%t] %5p %c{1.} - %m%n
 rootLogger.level = INFO
 rootLogger.appenderRef.0.ref = CONSOLE</code></pre>
