--- a/release-notes.html
+++ b/release-notes.html
@@ -510,6 +510,9 @@ See <a href="manual/pattern-layout.html#jansi" class="xref page">ANSI styling on
 <p>Fix <code>putAll()</code> in the default thread context map implementation (<a href="https://github.com/apache/logging-log4j2/pull/2942">2942</a>)</p>
 </li>
 <li>
+<p>Improves validation of HTTP Appender. (<a href="https://github.com/apache/logging-log4j2/issues/3011">3011</a>)</p>
+</li>
+<li>
 <p>Fix <code>getLogger()</code> source incompatibility in Log4j 1 to Log4j 2 API Bridge (i.e., <code>log4j-1.2-api</code>) (<a href="https://github.com/apache/logging-log4j2/pull/3030">3030</a>)</p>
 </li>
 <li>
