--- a/release-notes.html
+++ b/release-notes.html
@@ -311,10 +311,10 @@
 <div class="ulist">
 <ul>
 <li>
-<p>Update <code>ch.qos.logback:logback-classic</code> to version <code>1.5.15</code> (<a href="https://github.com/apache/logging-log4j2/pull/3327">3327</a>)</p>
+<p>Update <code>ch.qos.logback:logback-classic</code> to version <code>1.5.16</code> (<a href="https://github.com/apache/logging-log4j2/pull/3363">3363</a>)</p>
 </li>
 <li>
-<p>Update <code>ch.qos.logback:logback-core</code> to version <code>1.5.15</code> (<a href="https://github.com/apache/logging-log4j2/pull/3329">3329</a>)</p>
+<p>Update <code>ch.qos.logback:logback-core</code> to version <code>1.5.16</code> (<a href="https://github.com/apache/logging-log4j2/pull/3362">3362</a>)</p>
 </li>
 <li>
 <p>Update <code>ch.qos.reload4j:reload4j</code> to version <code>1.2.26</code> (<a href="https://github.com/apache/logging-log4j2/pull/3291">3291</a>)</p>
@@ -326,10 +326,16 @@
 <p>Update <code>com.fasterxml.jackson:jackson-bom</code> to version <code>2.18.2</code> (<a href="https://github.com/apache/logging-log4j2/pull/3245">3245</a>)</p>
 </li>
 <li>
-<p>Update <code>com.github.luben:zstd-jni</code> to version <code>1.5.6-8</code> (<a href="https://github.com/apache/logging-log4j2/pull/3238">3238</a>)</p>
+<p>Update <code>com.github.luben:zstd-jni</code> to version <code>1.5.6-10</code> (<a href="https://github.com/apache/logging-log4j2/pull/3443">3443</a>)</p>
+</li>
+<li>
+<p>Update <code>com.google.code.gson:gson</code> to version <code>2.12.1</code> (<a href="https://github.com/apache/logging-log4j2/pull/3429">3429</a>)</p>
 </li>
 <li>
 <p>Update <code>com.google.guava:guava</code> to version <code>33.4.0-jre</code> (<a href="https://github.com/apache/logging-log4j2/pull/3306">3306</a>)</p>
+</li>
+<li>
+<p>Update <code>commons-codec:commons-codec</code> to version <code>1.18.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/3419">3419</a>)</p>
 </li>
 <li>
 <p>Update <code>commons-io:commons-io</code> to version <code>2.18.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/3222">3222</a>)</p>
@@ -338,7 +344,7 @@
 <p>Update <code>gradle/develocity-actions</code> to version <code>1.3</code> (<a href="https://github.com/apache/logging-log4j2/pull/3308">3308</a>)</p>
 </li>
 <li>
-<p>Update <code>net.bytebuddy:byte-buddy</code> to version <code>1.15.11</code> (<a href="https://github.com/apache/logging-log4j2/pull/3293">3293</a>)</p>
+<p>Update <code>net.bytebuddy:byte-buddy</code> to version <code>1.17.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/3425">3425</a>)</p>
 </li>
 <li>
 <p>Update <code>net.java.dev.jna:jna</code> to version <code>5.16.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/3328">3328</a>)</p>
@@ -350,10 +356,19 @@
 <p>Update <code>org.apache.commons:commons-dbcp2</code> to version <code>2.13.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/3266">3266</a>)</p>
 </li>
 <li>
+<p>Update <code>org.apache.commons:commons-pool2</code> to version <code>2.12.1</code> (<a href="https://github.com/apache/logging-log4j2/pull/3420">3420</a>)</p>
+</li>
+<li>
 <p>Update <code>org.apache.groovy:groovy-bom</code> to version <code>4.0.24</code> (<a href="https://github.com/apache/logging-log4j2/pull/3192">3192</a>)</p>
 </li>
 <li>
 <p>Update <code>org.apache.logging.log4j:log4j-api</code> to version <code>2.24.3</code> (<a href="https://github.com/apache/logging-log4j2/pull/3292">3292</a>)</p>
+</li>
+<li>
+<p>Update <code>org.apache.logging:logging-parent</code> to version <code>12.0.0</code></p>
+</li>
+<li>
+<p>Update <code>org.assertj:assertj-core</code> to version <code>3.27.3</code> (<a href="https://github.com/apache/logging-log4j2/pull/3403">3403</a>)</p>
 </li>
 <li>
 <p>Update <code>org.codehaus.plexus:plexus-utils</code> to version <code>3.6.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/3294">3294</a>)</p>
@@ -365,7 +380,25 @@
 <p>Update <code>org.jmdns:jmdns</code> to version <code>3.6.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/3193">3193</a>)</p>
 </li>
 <li>
+<p>Update <code>org.junit:junit-bom</code> to version <code>5.11.4</code> (<a href="https://github.com/apache/logging-log4j2/pull/3305">3305</a>)</p>
+</li>
+<li>
+<p>Update <code>org.mockito:mockito-bom</code> to version <code>5.15.2</code> (<a href="https://github.com/apache/logging-log4j2/pull/3353">3353</a>)</p>
+</li>
+<li>
+<p>Update <code>org.mongodb:bson</code> to version <code>5.3.1</code> (<a href="https://github.com/apache/logging-log4j2/pull/3410">3410</a>)</p>
+</li>
+<li>
 <p>Update <code>org.openjdk.nashorn:nashorn-core</code> to version <code>15.6</code> (<a href="https://github.com/apache/logging-log4j2/pull/3330">3330</a>)</p>
+</li>
+<li>
+<p>Update <code>org.openrewrite.maven:rewrite-maven-plugin</code> to version <code>6.0.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/3385">3385</a>)</p>
+</li>
+<li>
+<p>Update <code>org.openrewrite.recipe:rewrite-logging-frameworks</code> to version <code>3.1.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/3414">3414</a>)</p>
+</li>
+<li>
+<p>Update <code>org.openrewrite.recipe:rewrite-migrate-java</code> to version <code>3.0.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/3383">3383</a>)</p>
 </li>
 <li>
 <p>Update <code>org.ops4j.pax.exam:exam-maven-plugin</code> to version <code>4.14.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/3276">3276</a>)</p>
@@ -374,16 +407,16 @@
 <p>Update <code>org.ops4j.pax.exam:pax-exam</code> to version <code>4.14.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/3275">3275</a>)</p>
 </li>
 <li>
-<p>Update <code>org.springframework.boot:spring-boot-autoconfigure</code> to version <code>3.4.1</code> (<a href="https://github.com/apache/logging-log4j2/pull/3314">3314</a>)</p>
+<p>Update <code>org.springframework.boot:spring-boot-autoconfigure</code> to version <code>3.4.2</code> (<a href="https://github.com/apache/logging-log4j2/pull/3411">3411</a>)</p>
 </li>
 <li>
 <p>Update <code>org.springframework.cloud:spring-cloud-context</code> to version <code>4.2.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/3268">3268</a>)</p>
 </li>
 <li>
-<p>Update <code>org.springframework:spring-framework-bom</code> to version <code>6.2.1</code> (<a href="https://github.com/apache/logging-log4j2/pull/3285">3285</a>)</p>
+<p>Update <code>org.springframework:spring-framework-bom</code> to version <code>6.2.3</code> (<a href="https://github.com/apache/logging-log4j2/pull/3466">3466</a>)</p>
 </li>
 <li>
-<p>Update <code>org.wiremock:wiremock</code> to version <code>3.10.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/3262">3262</a>)</p>
+<p>Update <code>org.wiremock:wiremock</code> to version <code>3.12.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/3465">3465</a>)</p>
 </li>
 </ul>
 </div>
@@ -1317,7 +1350,7 @@ for Log4j 2.x will continue to operate with the Log4j 3.x libraries present inst
 </div>
 <footer class="footer">
   <p>
-    Copyright © 1999-2024 <a href="https://www.apache.org/">The Apache Software Foundation</a>.
+    Copyright © 1999-2025 <a href="https://www.apache.org/">The Apache Software Foundation</a>.
     Licensed under the <a href="https://www.apache.org/licenses/LICENSE-2.0">Apache Software License, Version 2.0</a>.
     Please read our <a href="https://privacy.apache.org/policies/privacy-policy-public.html">privacy policy</a>.
   </p>
