--- a/plugin-reference.html
+++ b/plugin-reference.html
@@ -16271,6 +16271,40 @@ toString(), or to output the value of a specific key within the property bundle 
 <div class="sect2">
 <h3 id="org-apache-logging-log4j_log4j-jdbc"><a class="anchor" href="#org-apache-logging-log4j_log4j-jdbc"></a><code>org.apache.logging.log4j:log4j-jdbc</code></h3>
 <div class="sect3">
+<h4 id="org-apache-logging-log4j_log4j-jdbc_org-apache-logging-log4j-jdbc-appender-AbstractConnectionSource"><a class="anchor" href="#org-apache-logging-log4j_log4j-jdbc_org-apache-logging-log4j-jdbc-appender-AbstractConnectionSource"></a><code>org.apache.logging.log4j.jdbc.appender.AbstractConnectionSource</code></h4>
+<div class="dlist">
+<dl>
+<dt class="hdlist1">Class</dt>
+<dd>
+<p><code>org.apache.logging.log4j.jdbc.appender.AbstractConnectionSource</code></p>
+</dd>
+<dt class="hdlist1">Provider</dt>
+<dd>
+<p><code>org.apache.logging.log4j:log4j-jdbc</code></p>
+</dd>
+</dl>
+</div>
+<div class="sect4">
+<h5 id="org-apache-logging-log4j_log4j-jdbc_org-apache-logging-log4j-jdbc-appender-AbstractConnectionSource_implementations"><a class="anchor" href="#org-apache-logging-log4j_log4j-jdbc_org-apache-logging-log4j-jdbc-appender-AbstractConnectionSource_implementations"></a>Known implementations</h5>
+<div class="ulist">
+<ul>
+<li>
+<p><a href="#org-apache-logging-log4j_log4j-jdbc-dbcp2_org-apache-logging-log4j-dbcp2-appender-PoolingDriverConnectionSource">PoolingDriverConnectionSource</a></p>
+</li>
+<li>
+<p><a href="#org-apache-logging-log4j_log4j-jdbc_org-apache-logging-log4j-jdbc-appender-DriverManagerConnectionSource">DriverManagerConnectionSource</a></p>
+</li>
+<li>
+<p><a href="#org-apache-logging-log4j_log4j-jdbc_org-apache-logging-log4j-jdbc-appender-FactoryMethodConnectionSource">FactoryMethodConnectionSource</a></p>
+</li>
+<li>
+<p><a href="#org-apache-logging-log4j_log4j-jdbc-jndi_org-apache-logging-log4j-jdbc-jndi-DataSourceConnectionSource">DataSourceConnectionSource</a></p>
+</li>
+</ul>
+</div>
+</div>
+</div>
+<div class="sect3">
 <h4 id="org-apache-logging-log4j_log4j-jdbc_org-apache-logging-log4j-jdbc-appender-AbstractDriverManagerConnectionSource"><a class="anchor" href="#org-apache-logging-log4j_log4j-jdbc_org-apache-logging-log4j-jdbc-appender-AbstractDriverManagerConnectionSource"></a><code>org.apache.logging.log4j.jdbc.appender.AbstractDriverManagerConnectionSource</code></h4>
 <div class="dlist">
 <dl>
@@ -16406,6 +16440,46 @@ This handy to get you off the ground without having to deal with JNDI.</p>
 </tr>
 </tbody>
 </table>
+</div>
+</div>
+<div class="sect3">
+<h4 id="org-apache-logging-log4j_log4j-jdbc_org-apache-logging-log4j-jdbc-appender-ConnectionSource"><a class="anchor" href="#org-apache-logging-log4j_log4j-jdbc_org-apache-logging-log4j-jdbc-appender-ConnectionSource"></a><code>org.apache.logging.log4j.jdbc.appender.ConnectionSource</code></h4>
+<div class="dlist">
+<dl>
+<dt class="hdlist1">Class</dt>
+<dd>
+<p><code>org.apache.logging.log4j.jdbc.appender.ConnectionSource</code></p>
+</dd>
+<dt class="hdlist1">Provider</dt>
+<dd>
+<p><code>org.apache.logging.log4j:log4j-jdbc</code></p>
+</dd>
+</dl>
+</div>
+<div class="paragraph">
+<p>Configuration element for <a href="#org-apache-logging-log4j_log4j-jdbc_org-apache-logging-log4j-jdbc-appender-JdbcAppender">JdbcAppender</a>.</p>
+</div>
+<div class="paragraph">
+<p>If you want to use the <a href="#org-apache-logging-log4j_log4j-jdbc_org-apache-logging-log4j-jdbc-appender-JdbcAppender">JdbcAppender</a> but none of the provided connection sources meet your needs, you can simply create your own connection source.</p>
+</div>
+<div class="sect4">
+<h5 id="org-apache-logging-log4j_log4j-jdbc_org-apache-logging-log4j-jdbc-appender-ConnectionSource_implementations"><a class="anchor" href="#org-apache-logging-log4j_log4j-jdbc_org-apache-logging-log4j-jdbc-appender-ConnectionSource_implementations"></a>Known implementations</h5>
+<div class="ulist">
+<ul>
+<li>
+<p><a href="#org-apache-logging-log4j_log4j-jdbc-dbcp2_org-apache-logging-log4j-dbcp2-appender-PoolingDriverConnectionSource">PoolingDriverConnectionSource</a></p>
+</li>
+<li>
+<p><a href="#org-apache-logging-log4j_log4j-jdbc_org-apache-logging-log4j-jdbc-appender-DriverManagerConnectionSource">DriverManagerConnectionSource</a></p>
+</li>
+<li>
+<p><a href="#org-apache-logging-log4j_log4j-jdbc_org-apache-logging-log4j-jdbc-appender-FactoryMethodConnectionSource">FactoryMethodConnectionSource</a></p>
+</li>
+<li>
+<p><a href="#org-apache-logging-log4j_log4j-jdbc-jndi_org-apache-logging-log4j-jdbc-jndi-DataSourceConnectionSource">DataSourceConnectionSource</a></p>
+</li>
+</ul>
+</div>
 </div>
 </div>
 <div class="sect3">
@@ -16747,7 +16821,7 @@ This appender can be reconfigured at run time.</p>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock"><code><a href="#org-apache-logging-log4j_log4j-jdbc-jndi_org-apache-logging-log4j-jdbc-appender-ConnectionSource">ConnectionSource</a></code></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><code><a href="#org-apache-logging-log4j_log4j-jdbc_org-apache-logging-log4j-jdbc-appender-ConnectionSource">ConnectionSource</a></code></p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
 <p>The connections source from which database connections should be retrieved.</p>
 </div></div></td>
@@ -17060,74 +17134,6 @@ This appender can be reconfigured at run time.</p>
 </div>
 <div class="sect2">
 <h3 id="org-apache-logging-log4j_log4j-jdbc-jndi"><a class="anchor" href="#org-apache-logging-log4j_log4j-jdbc-jndi"></a><code>org.apache.logging.log4j:log4j-jdbc-jndi</code></h3>
-<div class="sect3">
-<h4 id="org-apache-logging-log4j_log4j-jdbc-jndi_org-apache-logging-log4j-jdbc-appender-AbstractConnectionSource"><a class="anchor" href="#org-apache-logging-log4j_log4j-jdbc-jndi_org-apache-logging-log4j-jdbc-appender-AbstractConnectionSource"></a><code>org.apache.logging.log4j.jdbc.appender.AbstractConnectionSource</code></h4>
-<div class="dlist">
-<dl>
-<dt class="hdlist1">Class</dt>
-<dd>
-<p><code>org.apache.logging.log4j.jdbc.appender.AbstractConnectionSource</code></p>
-</dd>
-<dt class="hdlist1">Provider</dt>
-<dd>
-<p><code>org.apache.logging.log4j:log4j-jdbc-jndi</code></p>
-</dd>
-</dl>
-</div>
-<div class="sect4">
-<h5 id="org-apache-logging-log4j_log4j-jdbc-jndi_org-apache-logging-log4j-jdbc-appender-AbstractConnectionSource_implementations"><a class="anchor" href="#org-apache-logging-log4j_log4j-jdbc-jndi_org-apache-logging-log4j-jdbc-appender-AbstractConnectionSource_implementations"></a>Known implementations</h5>
-<div class="ulist">
-<ul>
-<li>
-<p><a href="#org-apache-logging-log4j_log4j-jdbc-dbcp2_org-apache-logging-log4j-dbcp2-appender-PoolingDriverConnectionSource">PoolingDriverConnectionSource</a></p>
-</li>
-<li>
-<p><a href="#org-apache-logging-log4j_log4j-jdbc_org-apache-logging-log4j-jdbc-appender-DriverManagerConnectionSource">DriverManagerConnectionSource</a></p>
-</li>
-<li>
-<p><a href="#org-apache-logging-log4j_log4j-jdbc_org-apache-logging-log4j-jdbc-appender-FactoryMethodConnectionSource">FactoryMethodConnectionSource</a></p>
-</li>
-<li>
-<p><a href="#org-apache-logging-log4j_log4j-jdbc-jndi_org-apache-logging-log4j-jdbc-jndi-DataSourceConnectionSource">DataSourceConnectionSource</a></p>
-</li>
-</ul>
-</div>
-</div>
-</div>
-<div class="sect3">
-<h4 id="org-apache-logging-log4j_log4j-jdbc-jndi_org-apache-logging-log4j-jdbc-appender-ConnectionSource"><a class="anchor" href="#org-apache-logging-log4j_log4j-jdbc-jndi_org-apache-logging-log4j-jdbc-appender-ConnectionSource"></a><code>org.apache.logging.log4j.jdbc.appender.ConnectionSource</code></h4>
-<div class="dlist">
-<dl>
-<dt class="hdlist1">Class</dt>
-<dd>
-<p><code>org.apache.logging.log4j.jdbc.appender.ConnectionSource</code></p>
-</dd>
-<dt class="hdlist1">Provider</dt>
-<dd>
-<p><code>org.apache.logging.log4j:log4j-jdbc-jndi</code></p>
-</dd>
-</dl>
-</div>
-<div class="sect4">
-<h5 id="org-apache-logging-log4j_log4j-jdbc-jndi_org-apache-logging-log4j-jdbc-appender-ConnectionSource_implementations"><a class="anchor" href="#org-apache-logging-log4j_log4j-jdbc-jndi_org-apache-logging-log4j-jdbc-appender-ConnectionSource_implementations"></a>Known implementations</h5>
-<div class="ulist">
-<ul>
-<li>
-<p><a href="#org-apache-logging-log4j_log4j-jdbc-dbcp2_org-apache-logging-log4j-dbcp2-appender-PoolingDriverConnectionSource">PoolingDriverConnectionSource</a></p>
-</li>
-<li>
-<p><a href="#org-apache-logging-log4j_log4j-jdbc_org-apache-logging-log4j-jdbc-appender-DriverManagerConnectionSource">DriverManagerConnectionSource</a></p>
-</li>
-<li>
-<p><a href="#org-apache-logging-log4j_log4j-jdbc_org-apache-logging-log4j-jdbc-appender-FactoryMethodConnectionSource">FactoryMethodConnectionSource</a></p>
-</li>
-<li>
-<p><a href="#org-apache-logging-log4j_log4j-jdbc-jndi_org-apache-logging-log4j-jdbc-jndi-DataSourceConnectionSource">DataSourceConnectionSource</a></p>
-</li>
-</ul>
-</div>
-</div>
-</div>
 <div class="sect3">
 <h4 id="org-apache-logging-log4j_log4j-jdbc-jndi_org-apache-logging-log4j-jdbc-jndi-DataSourceConnectionSource"><a class="anchor" href="#org-apache-logging-log4j_log4j-jdbc-jndi_org-apache-logging-log4j-jdbc-jndi-DataSourceConnectionSource"></a>DataSource</h4>
 <div class="dlist">
@@ -19613,7 +19619,7 @@ If no key is returned or there is no match the default pattern will be used.</p>
 </div>
 <footer class="footer">
   <p>
-    Copyright © 1999-2024 <a href="https://www.apache.org/">The Apache Software Foundation</a>.
+    Copyright © 1999-2025 <a href="https://www.apache.org/">The Apache Software Foundation</a>.
     Licensed under the <a href="https://www.apache.org/licenses/LICENSE-2.0">Apache Software License, Version 2.0</a>.
     Please read our <a href="https://privacy.apache.org/policies/privacy-policy-public.html">privacy policy</a>.
   </p>
