--- a/release-notes.html
+++ b/release-notes.html
@@ -341,6 +341,9 @@
 <p>Update <code>commons-io:commons-io</code> to version <code>2.18.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/3222">3222</a>)</p>
 </li>
 <li>
+<p>Update <code>commons-logging:commons-logging</code> to version <code>1.3.5</code> (<a href="https://github.com/apache/logging-log4j2/pull/3444">3444</a>)</p>
+</li>
+<li>
 <p>Update <code>gradle/develocity-actions</code> to version <code>1.3</code> (<a href="https://github.com/apache/logging-log4j2/pull/3308">3308</a>)</p>
 </li>
 <li>
@@ -351,6 +354,9 @@
 </li>
 <li>
 <p>Update <code>net.javacrumbs.json-unit:json-unit</code> to version <code>4.1.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/3261">3261</a>)</p>
+</li>
+<li>
+<p>Update <code>org.apache.commons:commons-csv</code> to version <code>1.13.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/3386">3386</a>)</p>
 </li>
 <li>
 <p>Update <code>org.apache.commons:commons-dbcp2</code> to version <code>2.13.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/3266">3266</a>)</p>
