--- a/release-notes.html
+++ b/release-notes.html
@@ -569,7 +569,7 @@ See <a href="manual/pattern-layout.html#jansi" class="xref page">ANSI styling on
 <p>Update <code>ch.qos.logback:logback-core</code> to version <code>1.3.15</code> (<a href="https://github.com/apache/logging-log4j2/pull/3354">3354</a>)</p>
 </li>
 <li>
-<p>Update <code>co.elastic.clients:elasticsearch-java</code> to version <code>8.17.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/3287">3287</a>)</p>
+<p>Update <code>co.elastic.clients:elasticsearch-java</code> to version <code>8.17.2</code> (<a href="https://github.com/apache/logging-log4j2/pull/3460">3460</a>)</p>
 </li>
 <li>
 <p>Update <code>com.code-intelligence:jazzer</code> to version <code>0.24.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/3424">3424</a>)</p>
@@ -585,6 +585,9 @@ See <a href="manual/pattern-layout.html#jansi" class="xref page">ANSI styling on
 </li>
 <li>
 <p>Update <code>com.google.guava:guava</code> to version <code>33.4.0-jre</code> (<a href="https://github.com/apache/logging-log4j2/pull/3302">3302</a>)</p>
+</li>
+<li>
+<p>Update <code>commons-codec:commons-codec</code> to version <code>1.18.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/3421">3421</a>)</p>
 </li>
 <li>
 <p>Update <code>commons-io:commons-io</code> to version <code>2.18.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/3223">3223</a>)</p>
