--- a/release-notes.html
+++ b/release-notes.html
@@ -413,6 +413,9 @@ See <a href="manual/pattern-layout.html#jansi" class="xref page">ANSI styling on
 <li>
 <p>Add a <code>GraalVmProcessor</code> annotation processor to generate GraalVM reachability metadata. (<a href="https://github.com/apache/logging-log4j2/pull/3053">3053</a>)</p>
 </li>
+<li>
+<p>Add <code>collectionName</code> and <code>databaseName</code> arguments to the MongoDB appender (<a href="https://github.com/apache/logging-log4j2/pull/3467">3467</a>)</p>
+</li>
 </ul>
 </div>
 </div>
@@ -668,7 +671,7 @@ See <a href="manual/pattern-layout.html#jansi" class="xref page">ANSI styling on
 <p>Update <code>org.openrewrite.maven:rewrite-maven-plugin</code> to version <code>6.0.1</code> (<a href="https://github.com/apache/logging-log4j2/pull/3397">3397</a>)</p>
 </li>
 <li>
-<p>Update <code>org.openrewrite.recipe:rewrite-logging-frameworks</code> to version <code>2.3.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/2986">2986</a>)</p>
+<p>Update <code>org.openrewrite.recipe:rewrite-logging-frameworks</code> to version <code>3.2.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/3446">3446</a>)</p>
 </li>
 <li>
 <p>Update <code>org.openrewrite.recipe:rewrite-migrate-java</code> to version <code>3.0.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/3390">3390</a>)</p>
