Add website content generated from `14adc25a49825b49995d4070210e87a3660f0f38`

--- a/release-notes.html
+++ b/release-notes.html
@@ -528,6 +528,9 @@ See <a href="manual/pattern-layout.html#jansi" class="xref page">ANSI styling on
 <p>Fix Android-related issues in Log4j Core. (<a href="https://github.com/apache/logging-log4j2/issues/3056">3056</a>)</p>
 </li>
 <li>
+<p>Fix the leak of non-Log4j dependencies in <code>log4j-bom</code> (<a href="https://github.com/apache/logging-log4j2/issues/3066">3066</a>, <a href="https://github.com/apache/logging-parent/pull/265">logging-parent#265</a>)</p>
+</li>
+<li>
 <p>Fix the conversion of <code>o.a.l.Priority</code> classes to Log4j 2 levels. (<a href="https://github.com/apache/logging-log4j2/pull/3085">3085</a>)</p>
 </li>
 <li>
