Add website content generated from `23290e480d7c9146af962d1a3707ab7b06648894`

--- a/release-notes.html
+++ b/release-notes.html
@@ -587,13 +587,16 @@ See <a href="manual/pattern-layout.html#jansi" class="xref page">ANSI styling on
 <p>Update <code>com.code-intelligence:jazzer</code> to version <code>0.24.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/3424">3424</a>)</p>
 </li>
 <li>
-<p>Update <code>com.fasterxml.jackson:jackson-bom</code> to version <code>2.18.2</code> (<a href="https://github.com/apache/logging-log4j2/pull/3244">3244</a>)</p>
+<p>Update <code>com.fasterxml.jackson:jackson-bom</code> to version <code>2.18.3</code> (<a href="https://github.com/apache/logging-log4j2/pull/3515">3515</a>)</p>
 </li>
 <li>
 <p>Update <code>com.github.jnr:jnr-ffi</code> to version <code>2.2.17</code> (<a href="https://github.com/apache/logging-log4j2/pull/3082">3082</a>)</p>
 </li>
 <li>
 <p>Update <code>com.github.luben:zstd-jni</code> to version <code>1.5.6-10</code> (<a href="https://github.com/apache/logging-log4j2/pull/3447">3447</a>)</p>
+</li>
+<li>
+<p>Update <code>com.github.spotbugs:spotbugs-annotations</code> to version <code>4.9.2</code> (<a href="https://github.com/apache/logging-log4j2/pull/3516">3516</a>)</p>
 </li>
 <li>
 <p>Update <code>com.google.guava:guava</code> to version <code>33.4.0-jre</code> (<a href="https://github.com/apache/logging-log4j2/pull/3302">3302</a>)</p>
